# d12frosted.io

./: .dir-locals.el  .gitignore  .gitlab-ci.yml  CLAUDE.md  CONTRIBUTING.org  Eldev  LICENSE  Makefile  README.md  README.org  about.org  atom.xml  bower.json  build  build-cache  build-rules.el  cabal.project.freeze  d12frosted-io.cabal  download-fonts  index.html  notes-cache  notes-cache.db  package.json  package.yaml  posts.html  prettier.config.mjs  projects.html  site.webmanifest  stack.yaml  support.org  tailwind.config.ts  vercel.json  watch
.ci/: github_push
app/: Config.hs  Main.hs
assets/: CNAME  about.org  config.json  index.html  projects.html  support.org
configs/: config.json
css/: blog.css  default.css  font-faces.css  fonts.css  index-bundle.css  index.css  post-bundle.css  post.css  w3.css
frontend/: .gitignore  deploy  package.json  webpack.config.js
posts/: 2015-02-04-canonical-path-v0.3.0.0.html  2015-02-04-canonical-path-v0.3.0.0.org  2015-02-04-canonical-path-v0.3.0.0.org.metadata  2015-02-07-make-the-fish-fly.html  2015-02-07-make-the-fish-fly.org  2015-02-07-make-the-fish-fly.org.metadata  2015-04-05-cabal-and-executables.html  2015-04-05-cabal-and-executables.org  2015-04-05-cabal-and-executables.org.metadata  2015-08-12-spqr.markdown  2015-10-07-rosa-rosa-rosam.markdown  2015-11-28-carpe-diem.markdown  2015-12-07-tu-quoque.markdown  2016-05-09-flyspell-correct-intro.html  2016-05-09-flyspell-correct-intro.org  2016-05-09-flyspell-correct-intro.org.metadata  2016-05-10-emacs-and-composability.html  2016-05-10-emacs-and-composability.org  2016-05-10-emacs-and-composability.org.metadata  2016-06-22-flyspell-correct-0.1.html  2016-06-22-flyspell-correct-0.1.org  2016-06-22-flyspell-correct-0.1.org.metadata  2016-06-24-Spacemacs-and-different-emacs-versions.html  2016-06-24-Spacemacs-and-different-emacs-versions.org  2016-06-24-Spacemacs-and-different-emacs-versions.org.metadata  2016-06-27-errors-in-shell-scripts.html  2016-06-27-errors-in-shell-scripts.org  2016-06-27-errors-in-shell-scripts.org.metadata  2016-12-20-Being-an-org-mode-addict.html  2016-12-20-Being-an-org-mode-addict.org  2016-12-20-Being-an-org-mode-addict.org.metadata  2017-06-09-deep-in-black-bashic.html  2017-06-09-deep-in-black-bashic.org  2017-06-09-deep-in-black-bashic.org.metadata  2017-06-11-Git-conditional-configurations.html  2017-06-11-Git-conditional-configurations.org  2017-06-11-Git-conditional-configurations.org.metadata  2017-06-13-Fish-notify-me-when-you-finish.html  2017-06-13-Fish-notify-me-when-you-finish.org  2017-06-13-Fish-notify-me-when-you-finish.org.metadata  (+104 more)
projects/: CanonicalPath.org  UnityLibrarySwitcher.org  barberry.io.org  counsel-osx-app.org  dotbot-brew.org  (+17 more)
(+369 files in other folders)
