cabal-version: 1.12

name:           d12frosted-io
version:        0.1.0.0
homepage:       https://github.com/d12frosted/d12frosted.io#readme
bug-reports:    https://github.com/d12frosted/d12frosted.io/issues
author:         Boris Buliga
maintainer:     Boris Buliga
license:        BSD3
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/d12frosted/d12frosted.io

executable d12frosted-io
  main-is: Main.hs
  other-modules:
      Site.About
      Site.CSS
      Site.Config
      Site.Core
      Site.Criterion
      Site.Criterion.Measurement
      Site.Criterion.Render
      Site.Criterion.Types
      Site.Index
      Site.Pandoc
      Site.Posts
      Site.Projects
      Site.RSS
      Site.Static
      Site.Support
      Site.Tags
      Paths_d12frosted_io
  hs-source-dirs:
      app
  build-depends:
      aeson
    , base >=4.7 && <5
    , binary
    , blaze-html
    , blaze-markup
    , bytestring
    , containers
    , env-extra
    , filepath
    , hakyll >=4.14
    , hashable
    , http-conduit
    , lens
    , lens-aeson
    , mtl
    , ordered-containers
    , pandoc
    , pandoc-types
    , path
    , regex-base
    , regex-tdfa
    , scientific
    , shakespeare
    , text
    , time
    , time-locale-compat
    , unordered-containers
  default-language: Haskell2010
